# deduptickets

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  docker-compose.yaml  function_app.py  host.json  local.settings.example.json  pyproject.toml  requirements.txt
.github/agents/: copilot-instructions.md  security-pr-orchestrator.agent.md
.github/prompts/: first-principles-review.prompt.md  quality-gates.prompt.md  security-pr-execution.prompt.md  security-pr-review.prompt.md
.github/skills/cosmosdb-best-practices/: AGENTS.md  SKILL.md
.github/workflows/: deploy-functions.yml
.rules/: ARCHITECTURE.md  ASYNC_PATTERNS.md  BRANCHING.md  CHECKLIST.md  COSMOS_FIELD_NAMING.md  FRONTEND_THEME.md  QUALITY_GATES.md
.rules/exec-plans/: README.md
.rules/exec-plans/active/: .gitkeep
.specify/memory/: constitution.md
backend/: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
backend/data/: batch.json  sample_tickets.json
backend/scripts/: generate_sample_tickets.py  load_tickets.py
backend/src/: config.py  dependencies.py  exceptions.py  main.py
backend/src/api/middleware/: __init__.py  cache.py
backend/src/cosmos/: __init__.py  client.py  setup.py
backend/src/deduptickets/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
backend/src/deduptickets/api/middleware/: __init__.py  audit_middleware.py  cache.py
backend/src/deduptickets/cosmos/: client.py  setup.py
backend/src/deduptickets/models/: __init__.py  audit_entry.py  baseline.py  cluster.py  driver.py  merge_operation.py  spike_alert.py  ticket.py
backend/src/deduptickets/repositories/: __init__.py  audit.py  base.py  baseline.py  cluster.py  merge.py  spike.py  ticket.py
backend/src/deduptickets/routes/: __init__.py  audit.py  clusters.py  health.py  merges.py  spikes.py  tickets.py  trends.py
backend/src/deduptickets/schemas/: __init__.py  audit.py  cluster.py  common.py  driver.py  merge.py  spike.py  ticket.py
backend/src/deduptickets/services/: __init__.py  clustering_service.py  merge_service.py  spike_service.py  trend_service.py
backend/src/deduptickets/workers/: spike_worker.py
backend/src/lib/: __init__.py  embedding.py
backend/src/models/: __init__.py  cluster.py  merge_operation.py  ticket.py
backend/src/repositories/: __init__.py  base.py  cluster.py  merge.py  ticket.py
backend/src/routes/: clusters.py  health.py  merges.py  tickets.py
backend/src/schemas/: __init__.py  cluster.py  common.py  merge.py  ticket.py
backend/src/services/: __init__.py  clustering_service.py  merge_service.py
backend/tests/: __init__.py  conftest.py  utils.py
backend/tests/contract/: conftest.py  test_audit_api.py  test_clusters_api.py  test_health_api.py  test_merges_api.py  test_tickets_api.py
backend/tests/integration/: test_audit_trail.py  test_clustering_flow.py  test_merge_flow.py  test_merge_revert_flow.py  test_spike_detection_flow.py
backend/tests/unit/: test_cache_middleware.py  test_clustering_service.py  test_concrete_repositories.py  test_embedding.py  test_exceptions.py  test_merge_service.py  test_models.py  test_repository.py  test_similarity.py  test_spike_service.py  test_trend_service.py
docs/: AGENT_INTERACTION.md  API_STANDARDS.md  CHECKLIST.md  DEPENDENCIES.md  FRONTEND_THEME.md  PATTERNS.md  QUALITY_GATES.md  QUALITY_SCORE.md  RUNTIME.md  SERVERLESS.md
docs/exec-plans/completed/: .gitkeep
frontend/: .env.example  .eslintrc.cjs  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/audit/: AuditLog.tsx
frontend/src/components/clusters/: ClusterCard.tsx  ClusterDetail.tsx  ClusterList.tsx  MergeDialog.tsx
frontend/src/components/merges/: MergeHistoryItem.tsx  RevertConfirmDialog.tsx
frontend/src/components/shared/: ConfidenceBadge.tsx  ConfirmDialog.tsx  MonthSelector.tsx  Sidebar.tsx  ThemeToggle.tsx  TicketPreview.tsx
frontend/src/components/spikes/: SpikeAlertCard.tsx  SpikeDrilldown.tsx
frontend/src/components/tickets/: TicketDetailModal.tsx  TicketsTable.tsx
frontend/src/components/trends/: TopDrivers.tsx  TrendChart.tsx  trendUtils.ts
frontend/src/hooks/: useClusters.ts  useTheme.ts  useTickets.ts
frontend/src/pages/: AuditPage.tsx  ClustersPage.tsx  Dashboard.tsx  MergeDetailPage.tsx  MergesPage.tsx  SpikesPage.tsx  TicketsPage.tsx  TrendsPage.tsx
frontend/src/services/: api.ts  auditService.ts  clusterService.ts  mergeService.ts  spikeService.ts  ticketService.ts  trendService.ts
frontend/src/theme/: colors.ts
frontend/src/types/: index.ts
frontend/tests/e2e/: merge-flow.spec.ts
scripts/: assign_cosmos_role.sh  lint_docs.py
specs/001-ticket-dedup-dashboard/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-ticket-dedup-dashboard/checklists/: requirements.md
specs/001-ticket-dedup-dashboard/contracts/: openapi.yaml
